fix alignment

--- a/assets/styles/main/repository.sass
+++ b/assets/styles/main/repository.sass
@@ -11,6 +11,8 @@
     margin-right: 5px
 
   .status-image
+    position: relative
+    top: 1px
     width: 90px
     height: 25px
     display: inline-block
@@ -19,7 +21,7 @@
     a#status-image-popup
       display: inline-block
       opacity: 1.0
-      margin-top: 8px
+      //margin-top: 8px
 
       img
         border: none
@@ -28,6 +30,8 @@
     width: 21px
     height: 21px
     display: inline-block
+    position: relative
+    top: 1px
 
   .github-icon
     img
